--- a/js+react/index.html
+++ b/js+react/index.html
@@ -10,6 +10,9 @@
 </head>
 <body>
 
-<script src="script.js"></script>
+<div class="out"></div>
+
+<script src="practical.js"></script>
+<script src="main_1.js"></script>
 </body>
 </html>
