--- a/js+react/JavaScript/_draft/index.html
+++ b/js+react/JavaScript/_draft/index.html
@@ -14,8 +14,14 @@
 <body>
 
 <section class="main">
+    <a class="btn btn-secondary main__btn" id="startScript" href="#">check</a>
     <div class="container">
-        <a class="btn btn-primary main__btn" id="startScript" href="#">Start</a>
+
+<!--        <div class="lesson-64">
+            <div class="box">
+                <div class="cube"></div>
+            </div>
+        </div>-->
     </div>
 </section>
 
