--- a/js+react/JavaScript/_draft/index.html
+++ b/js+react/JavaScript/_draft/index.html
@@ -17,11 +17,17 @@
     <a class="btn btn-secondary main__btn" id="startScript" href="#">check</a>
     <div class="container">
 
-<!--        <div class="lesson-64">
-            <div class="box">
-                <div class="cube"></div>
-            </div>
-        </div>-->
+<!--
+    <div contenteditable class="box1">
+
+    </div>
+
+   <div class="lesson-64">
+        <div class="box">
+            <div class="cube"></div>
+        </div>
+    </div>
+-->
     </div>
 </section>
 
